<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_find_books"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="fr.schollaert.mybooks.activity.FindBooksActivity">


    <ListView
        android:id="@+id/listBookView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/envoyerRecherche"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="17dp">
    </ListView>

    <Button
        android:text="@string/Rechercher"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/envoyerRecherche"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_alignTop="@+id/findingText"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_toRightOf="@+id/findingText"
        android:layout_toEndOf="@+id/findingText" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_marginTop="22dp"
        android:id="@+id/findingText"
        android:hint="@string/texteAchercher"
        android:layout_below="@+id/textView4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
</RelativeLayout>
