...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="fr.schollaert.mybooks.activity.MenuActivity">


    <Button
        android:id="@+id/meButton"
        style="@android:style/Widget.Material.Button.Borderless.Colored"
        android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Menu"
        android:textColor="?android:attr/colorControlActivated"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/monProfil"
...
        android:layout_marginTop="19dp"
        android:layout_below="@+id/myFriendsButton"
        android:drawableBottom="@drawable/ic_person_black_24dp"
        android:textSize="18sp" />

    <Button
        android:id="@+id/findBookButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/RechercherLivre"
        android:drawableBottom="?android:attr/actionModeFindDrawable"
        android:layout_alignParentTop="false"
        android:layout_marginTop="25dp"
...
