<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_me"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="fr.schollaert.mybooks.activity.MeActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="11dp"
        android:layout_marginStart="11dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true">

        <ListView
            android:id="@+id/listParam"
            android:layout_width="320dp"
            android:layout_height="309dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="25dp">
        </ListView>

        <Button
            android:text="@string/amis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_seeFriends"
            android:drawableBottom="@drawable/ic_people_black_24dp"
            style="@style/Widget.AppCompat.Button.Colored" />

        <Button
            android:text="@string/library"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_seeBooks"
            android:drawableBottom="@drawable/boook_24dp"
            style="@style/Widget.AppCompat.Button.Colored" />
    </LinearLayout>
</RelativeLayout>

