<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_edit_param"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="fr.schollaert.mybooks.activity.EditParamActivity">

    <TextView
        android:text="@string/paramNAme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvParamName"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Button" />

    <EditText
        android:layout_width="match_parent"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/et_paramValue"
        android:hint="@string/paramValue"
        android:layout_below="@+id/tvParamName"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_height="wrap_content" />

    <Button
        android:text="@string/Valider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_saveParam"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:drawableBottom="@android:drawable/ic_menu_save"
        android:layout_below="@+id/et_paramValue"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
